--- a/src/components/Button/_button.scss
+++ b/src/components/Button/_button.scss
@@ -1,24 +1,19 @@
 @import '../../styles/base';
 
 .btn {
-    //@include flex-row-center;
+    @include flex-row-center;
     @include color;
     @include outer-shadow(4px, 6px);
     position: relative;
     justify-content: space-around;
-    margin: 0 4px;
+    border-radius: 16px;
     border: none;
-    border-radius: 50px;
     cursor: pointer;
     padding: 8px 16px;
     text-align: center;
     vertical-align: middle;
     text-decoration: none;
     transition: all .3s ease-in-out;
-
-    & .btn-icon {
-        display: none;
-    }
 
     &:hover {
         @include outer-shadow(2px, 3px);
@@ -37,7 +32,7 @@
     &.expand {
         
         & .btn-icon {
-            display: inline-block;
+            display: flex;
             position: absolute;
             left: auto;
             top: auto;
@@ -49,6 +44,13 @@
         & .btn-text {
             margin-left: 24px;
         }
+    }
+
+    &.round {
+        padding: 8px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
     }
 
 }
