--- a/src/components/ProcessCard/_processcard.scss
+++ b/src/components/ProcessCard/_processcard.scss
@@ -9,8 +9,8 @@
     
     & .content {
         @include flex-column-center;
-        width: 175px;
-        height: 175px;
+        width: 190px;
+        height: 190px;
         justify-content: center;
         padding: 8px;
         border-radius: 16px;
@@ -33,7 +33,7 @@
         font-size: 48px;
         font-weight: 500;
         top: 0;
-        // transform: translateY(-50%);
+        transform: translateY(-15px);
         @include flex-column-center;
         @include color;
         @include outer-shadow(2px, 6px);
