--- a/src/components/Modal/_modal.scss
+++ b/src/components/Modal/_modal.scss
@@ -5,6 +5,7 @@
 	left: 50%;
 	bottom: 50%;
 	transform: translate(-50%, 50%);
+	// animation: open .3s ease-in-out;
 
 	&__container {
 		@include flex-column-center;
@@ -24,5 +25,16 @@
 
 	&__content {
 		@include flex-row-center;
+	}
+}
+
+@keyframes open {
+	0% {
+		// transform: scale(.6);
+		opacity: .5;
+	}
+	100% {
+		// transform: scale(1);
+		opacity: 1;
 	}
 }
