--- a/src/components/HorizontalTable/_horizontaltable.scss
+++ b/src/components/HorizontalTable/_horizontaltable.scss
@@ -11,9 +11,10 @@
 		border-radius: 16px;
 		padding: 8px 16px;
 		margin: 8px 0;
+		min-height: 48px;
 
 		& .table-slot {
-			width: 32px;
+			min-width: 32px;
 			height: 32px;
 			@include inner-shadow(2px, 3px);
 			border-radius: 8px;
