--- a/src/components/Button/_button.scss
+++ b/src/components/Button/_button.scss
@@ -1,22 +1,26 @@
 @import '../../styles/base';
 
 .btn {
+    @include color;
+    font-size: 1em;
     @include flex-row-center;
     @include color;
-    @include outer-shadow(4px, 6px);
+    @include outer-shadow(.2em, .5em);
     position: relative;
     justify-content: space-around;
-    border-radius: 16px;
+    // border-radius: 16px;
+    border-radius: 1em;
     border: none;
     cursor: pointer;
-    padding: 8px 16px;
+    // padding: 8px 16px;
+    padding: .5em 1em;
     text-align: center;
     vertical-align: middle;
     text-decoration: none;
     transition: all .3s ease-in-out;
 
     &:hover {
-        @include outer-shadow(2px, 3px);
+        @include outer-shadow(.1em, .3em);
     }
 
     &:focus {
