--- a/src/components/HorizontalTable/_horizontaltable.scss
+++ b/src/components/HorizontalTable/_horizontaltable.scss
@@ -9,17 +9,21 @@
 		@include flex-row-center;
 		@include outer-shadow(4px, 6px);
 		border-radius: 16px;
-		padding: 8px 16px;
+		// padding: 8px 16px;
+		padding: .5em 1em;
 		margin: 8px 0;
-		min-height: 48px;
+		// min-height: 48px;
+		min-height: 3em;
 
 		& .table-slot {
-			min-width: 32px;
-			height: 32px;
+			// min-width: 32px;
+			min-width: 2em;
+			height: 2em;
 			@include inner-shadow(2px, 3px);
 			border-radius: 8px;
 			margin: 0 4px;
-			padding: 8px;
+			// padding: 8px;
+			padding: .5em;
 			@include flex-row-center
 		}
 	}
