--- a/src/components/InfoPanel/_infopanel.scss
+++ b/src/components/InfoPanel/_infopanel.scss
@@ -3,9 +3,11 @@
 .info {
     @include flex-column-center;
     @include outer-shadow(6px, 10px);
-    padding: 8px 16px;
+    // padding: 8px 16px;
+    padding: .5em 1em;
     border-radius: 16px;
-    width: calc(20vw);
+    // width: calc(20vw);
+    width: 15em;
 
 
     &__current {
@@ -17,12 +19,14 @@
 
     &__screen {
         width: 100%;
-        height: 150px;
+        // height: 150px;
+        height: 9em;
         // height: 180px;
         position: relative;
         @include flex-row-center;
         & .info__current {
-            font-size: 40px;
+            // font-size: 40px;
+            font-size: 2.5em;
             // margin-bottom: 28px;
         }
 
@@ -44,7 +48,8 @@
 
     }
 
-    & p {
-        margin-top: 8px;
-    }
+    // & p {
+    //     // margin-top: 8px;
+    //     // margin-top: em;
+    // }
 }
