--- a/src/components/Modal/_modal.scss
+++ b/src/components/Modal/_modal.scss
@@ -5,16 +5,29 @@
 	left: 50%;
 	bottom: 50%;
 	transform: translate(-50%, 50%);
+	// max-height: calc(90%);
+	height: 95%;
+	width: 50%;
+	// overflow-y: hidden;
 	// animation: open .3s ease-in-out;
-
+	
+	& .btn-close {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: .5em;
+	}
+	
 	&__container {
+		width: 100%;
+		height: inherit;
 		@include flex-column-center;
 		@include color;
 		@include outer-shadow(5px, 10px);
 		padding: 1em 2em;
 		border-radius: 2em;
 	}
-
+	
 	&__header {
 		@include flex-row-center;
 		width: 100%;
@@ -22,8 +35,11 @@
 		padding-bottom: 8px;
 		border-bottom: 3px solid rgba(0, 0, 0, 0.2);
 	}
-
+	
 	&__content {
+		width: 100%;
+		height: 100%;
+		overflow-y: auto;
 		@include flex-row-center;
 	}
 }
