--- a/src/components/ProcessCard/_processcard.scss
+++ b/src/components/ProcessCard/_processcard.scss
@@ -2,17 +2,26 @@
 
 .card-wrapper {
     position: relative;
-    width: 175px;
-    height: 211px;
+    // width: 175px;
+    width: 13.5em;
+    // height: 211px;
+    height: 14em;
     @include flex-column-center;
     justify-content: flex-end;
+    // margin: 0 .5em;
+    // margin-top: 1em;
+    padding: 1em 1em;
     
     & .content {
         @include flex-column-center;
-        width: 190px;
-        height: 190px;
-        justify-content: center;
-        padding: 8px;
+        // width: 190px;
+        width: 100%;
+        height: 90%;
+        // width: 11em;
+        // height: 190px;
+        // height: 11em;
+        // justify-content: center;
+        // padding: .1em;
         border-radius: 16px;
         @include color;
         @include outer-shadow(2px, 6px);
@@ -20,20 +29,24 @@
 
         & .references,
         & .arrival-time {
-            font-size: 16px;
-            margin-top: 8px;
+            // font-size: 16px;
+            margin-top: .3em;
         }
     }
 
     & .pid {
         position: absolute;
-        width: 72px;
-        height: 72px;
+        // width: 72px;
+        // height: 72px;
+        width: 1.5em;
+        height: 1.5em;
         border-radius: 50px;
-        font-size: 48px;
-        font-weight: 500;
+        // font-size: 48px;
+        font-size: 2.8em;
+        // font-weight: 500;
+        font-weight: bold;
         top: 0;
-        transform: translateY(-15px);
+        // transform: translateY(-.1em);
         @include flex-column-center;
         @include color;
         @include outer-shadow(2px, 6px);
@@ -43,9 +56,13 @@
 
 .section {
     @include flex-row-center;
-    font-size: 16px;
+    font-size: 1em;
     margin-top: 8px;
     & .section-icon {
         margin-right: 8px;
+    }
+
+    & span {
+        
     }
 }
