--- a/src/components/Toggle/_toggle.scss
+++ b/src/components/Toggle/_toggle.scss
@@ -10,15 +10,18 @@ input[type=checkbox] {
 }
 
 .theme-switch {
-    transition: all 2s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .toggle {
+
     & + label {
         cursor: pointer;
         text-indent: -9999px;
-        width: 80px;
-        height: 40px;
+        // width: 80px;
+        width: 5em;
+        // height: 40px;
+        height: 2.5em;
         @include color;
         display: block;
         border-radius: 100px;
@@ -29,10 +32,14 @@ input[type=checkbox] {
         &:after {
             content: '';
             position: absolute;
-            top: 8px;
-            left: 8px;
-            width: 24px;
-            height: 24px;
+            // top: 8px;
+            top: .5em;
+            left: .5em;
+            // left: 8px;
+            // width: 24px;
+            width: 1.5em;
+            // height: 24px;
+            height: 1.5em;
             background: yellow;
             border-radius: 90%;
             @include outer-shadow(2px, 4px);
@@ -41,14 +48,14 @@ input[type=checkbox] {
     }
 
     &input:checked + label:after {
-        left: calc(100% - 8px);
+        left: calc(100% - .5em);
         background: #fff;
         transform: translateX(-100%);
     }
 }
 
 input:checked + label:after {
-    left: calc(100% - 8px);
+    left: calc(100% - .5em);
     background: #fff;
     transform: translateX(-100%);
 }
