--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -13,3 +13,12 @@
         @include outer-shadow(4px, 6px);
     }
 }
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% { 
+        opacity: 1;
+    }
+}
