--- a/src/views/_fifo.scss
+++ b/src/views/_fifo.scss
@@ -6,7 +6,15 @@
     width: 100vw;
     height: 100vh;
     @include flex-column-center; 
-    justify-content: space-between;
+    // justify-content: space-between;
+
+    & .fifo-blur {
+        width: 100%;
+        height: 100%;
+        @include flex-column-center;
+        justify-content: space-between;
+    }
+
 
     &__main {
         // background-color: blue;
@@ -27,7 +35,7 @@
 
             & .process-queue {
 
-                width: 60%;
+                // width: 60%;
                 height: auto;
             }
         }
@@ -42,7 +50,7 @@
             height: 95%;
 
             & .fifo-physic-mem {
-                width: 30%;
+                // width: 30%;
                 max-height: calc(75vh);
                 margin-bottom: 16px;
             }
@@ -60,10 +68,30 @@
     &__buttons {
         // background-color: green;
 
-
-        width: 20%;
+        width: 93%;
         height: 10%;
         @include flex-row-center;
-        justify-content: space-evenly;
+        justify-content: space-between;
+
+        & .action-btns {
+            width: 15%;
+            @include flex-row-center;
+            justify-content: space-evenly;
+        }
     }
+}
+
+.message {
+    font-weight: 500;
+    color: red;
+    animation: appear 3s ease-in-out;
+    max-width: 70%;
+}
+
+@keyframes appear {
+    0% { opacity: 0; }
+    25% { opacity: .75; }
+    50% { opacity: 1; }
+    75% { opacity: .75; }
+    100% { opacity: 0; }
 }
